apps/planka/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: planka
  namespace: planka
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Planka"
    gethomepage.dev/group: "Home"
    gethomepage.dev/icon: "planka.png"
    gethomepage.dev/description: "Kanban boards"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-planka
  hostnames:
    - planka.stevevaradi.me
  rules:
    - backendRefs:
        - name: planka
          port: 1337
